--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -131,6 +135,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.2.0",
     "babel-plugin-import": "^1.11.0",
-    "less": "^3.9.0"
+    "less": "^3.9.0",
+    "mockjs": "^1.0.1-beta3"
   }
 }
